Change snap by signal 100M to 60 sec

--- a/flowd.8
+++ b/flowd.8
@@ -50,7 +50,7 @@ Causes \fIflowd\fP to write collected statistics.
 Causes \fIflowd\fP to reread access-list.
 .TP 10
 .BI SIGUSR2
-Causes \fIflowd\fP to write 100M of received traffic to snap-file.
+Causes \fIflowd\fP to write received traffic to snap-file during 1 min.
 .TP 10
 .BI SIGINT
 Causes \fIflowd\fP to restart itself.
