Cleanup perl code (sometimes segfault occured in perl_destruct() while perl_include)

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 - netflow v9
 - "snap" option in config line
 - put extra info in snap (pkts, proto, ports)
+- reloading perl filter: delete functions before reload
